--- a/todo.html
+++ b/todo.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js" type="text/JavaScript"> </script>
 </head>
 <body>
-<h2>TODO List</h2>
+    <h2>TODO List</h2>
 <form action="" id="form">
 <input type="text" id="input" placeholder="Enter your todo item">
 <input type="submit" id="sbmit" name="" >
@@ -18,18 +18,14 @@
 </ul>
 
 <script>
-  
-
-//from jQuery
-  //get the input
-  var jinput = $("#input")
+      var jinput = $("#input")
 var jform = $('#form')
 var jul = $('#lists')
 
-  //get the text from input field input.innerText
+ 
 jinput.val();
 
-jinput.innerText = new value
+
 jinput.val(' ')
 
 
@@ -57,4 +53,15 @@ function onclickHandler(e){
   $(jli).remove()
 }
 
+
+
+
+
 jform.on("submit",jonSubmitHandler)
+    
+</script>
+
+
+
+</body>
+</html>
